added javafx to pom.xml added module-info.java template was fixed