@@ -9,8 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -52,17 +51,25 @@
             <artifactId>log4j-core</artifactId>
             <version>2.23.1</version> 
         </dependency>
-
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.23.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.deepoove</groupId>
             <artifactId>poi-tl</artifactId>
             <version>1.12.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21.0.1</version>
         </dependency>
     </dependencies>
 
@@ -73,16 +80,24 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source> <target>21</target>
+                    <release>17</release>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>org.apache.poi.ooxml/org.apache.poi.xwpf.usermodel=poi.tl</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>ru.твой_пакет.MainApp</mainClass> 
+                    <mainClass>com.example.Main</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>org.apache.poi.ooxml/org.apache.poi.xwpf.usermodel=poi.tl</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
